test/errors/python_generator_error/zs/api_clashing/sql_table_with_api_clash_error.zs
package api_clashing.sql_table_with_api_clash_error;

sql_table Api
{
    uint32 id sql "PRIMARY KEY NOT NULL";
    string text;
};
